--- a/Inventory/Inventory.iOS/Inventory.iOS.csproj
+++ b/Inventory/Inventory.iOS/Inventory.iOS.csproj
@@ -149,6 +149,9 @@
     <Reference Include="Xamarin.iOS" />
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="FirebaseStorage.net">
+      <Version>1.0.2</Version>
+    </PackageReference>
     <PackageReference Include="Newtonsoft.Json">
       <Version>11.0.2</Version>
     </PackageReference>
