--- a/Inventory/Inventory/Inventory.csproj
+++ b/Inventory/Inventory/Inventory.csproj
@@ -29,6 +29,9 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Compile Update="Services\ItemDetailsServicePage.xaml.cs">
+      <DependentUpon>ItemDetailsServicePage.xaml</DependentUpon>
+    </Compile>
     <Compile Update="Services\ItemsFilteredServicePage.xaml.cs">
       <DependentUpon>ItemsFilteredServicePage.xaml</DependentUpon>
     </Compile>
@@ -38,7 +41,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <EmbeddedResource Update="Services\ItemDetailsPage.xaml">
+    <EmbeddedResource Update="Services\ItemDetailsServicePage.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
     <EmbeddedResource Update="Services\ItemsFilteredServicePage.xaml">
