Revert "Merge branch 'Mobile' of https://github.com/tonbao97/InventoryProject into Mobile"
This reverts commit 409a438db1af1631cd9aa30887b7ce0920ad99b4, reversing
changes made to 0f07359b1edf5e327654ddbf822084cf2d1ed76f.

--- a/Inventory/Inventory.Android/Inventory.Android.csproj
+++ b/Inventory/Inventory.Android/Inventory.Android.csproj
@@ -121,6 +121,7 @@
   <ItemGroup>
     <Folder Include="Resources\drawable-xhdpi\" />
     <Folder Include="Resources\drawable-xxhdpi\" />
+    <Folder Include="Resources\drawable-xxxhdpi\" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Inventory\Inventory.csproj">
@@ -166,7 +167,6 @@
   </ItemGroup>
   <ItemGroup>
     <AndroidResource Include="Resources\drawable\Scan2.png" />
-    <AndroidResource Include="Resources\drawable-xxxhdpi\mainmenuImage.jpg" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
 </Project>
