--- a/Inventory/Inventory/Inventory.csproj
+++ b/Inventory/Inventory/Inventory.csproj
@@ -66,7 +66,7 @@
     <EmbeddedResource Update="View\Scan\ScanPage.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
-    <EmbeddedResource Update="View\SearchItem\SearchItemPage.xaml">
+    <EmbeddedResource Update="View\SearchItem\SearchItemOptionPage.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
   </ItemGroup>
