Finished up all function (SearchbyLocation + SearchByUser)
+) All the function is now finished but still nedd optimized and testing.
+) The SearchByItem detail is remove (Base on scope change).

--- a/Inventory/Inventory/Inventory.csproj
+++ b/Inventory/Inventory/Inventory.csproj
@@ -69,10 +69,13 @@
     <EmbeddedResource Update="View\SearchItem\ItemSearch.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
-    <EmbeddedResource Update="View\SearchItem\LocationSearch.xaml">
+    <EmbeddedResource Update="View\SearchItem\LocationSearchPopUp\PopupListitem.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
     <EmbeddedResource Update="View\SearchItem\SearchItemOptionPage.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
+    <EmbeddedResource Update="View\SearchItem\SearchLocation.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
     <EmbeddedResource Update="View\SearchItem\UserSearch.xaml">
